<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:text="운동량 입력"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            >

            <Spinner
                android:id="@+id/workOutSpinner"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:spinnerMode="dialog"
                android:layout_marginEnd="20dp"
                android:gravity="center|right"
                />

            <NumberPicker
                android:id="@+id/workoutNumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|right"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/minute"
                android:textSize="20dp"
                android:gravity="center|right"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center|right">

            <TextView
                android:id="@+id/dialogkCalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consumekCal"
                android:paddingRight="10dp"/>

            <TextView
                android:id="@+id/dialogkCalConsumeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="(float_kcal)" />
            <TextView
                android:id="@+id/dialogkCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kCal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/workoutConfirmBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirm"></Button>

            <Button
                android:id="@+id/workoutCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"></Button>
            </LinearLayout>


    </LinearLayout>


</LinearLayout>